# introductionToFlask

./: .gitignore  LICENSE  README  firstapp.py  pyproject.toml  test_firstapp.py
static/: static.html
templates/: example_form.html  fruit.html  greet.html  greet_form.html  index.html  layout.html
