[tool.poetry]
name = "introduction-to-flask"
version = "0.1.0"
description = "Introductory Flask Application"
authors = ""

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.1"
ipython = "^7.8"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
